# tock

./: Cargo.toml  README.md  config.toml
docs/: config.toml
examples/: colorgrad.rs  route.rs  table.rs
src/: app.rs  cli.rs  config.rs  data.rs  gradient.rs  handler.rs  main.rs  models.rs  sound.rs  state.rs  ui.rs  util.rs
