[package]
name = "clock"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
crossterm = "0.27"
figlet-rs = "1.0.0"
ratatui = "0.30.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "6.0.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
