[package]
name = "tock"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
crossterm = "0.29.0"
figlet-rs = "1.0.0"
ratatui = "0.30.0"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "6.0.0"
color-eyre = "0.6.5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
